# opentrack

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  manual-build.yml  release.yml
src/: error.rs  lib.rs  main.rs  tracking.rs
src/cache/: mod.rs  store.rs
src/cli/: args.rs  mod.rs  output.rs
src/config/: mod.rs  types.rs
src/notifications/: event.rs  mod.rs
src/providers/: mod.rs
src/providers/chronopost/: api.rs  mod.rs  models.rs
src/providers/laposte/: api.rs  mod.rs  models.rs
src/providers/mondial_relay/: api.rs  browser_cdp.rs  mod.rs  models.rs  token.rs  transport.rs
src/tui/: app.rs  clipboard.rs  mod.rs
tests/fixtures/chronopost/: tracking_delivered.xml  tracking_intransit.xml
tests/fixtures/laposte/: tracking_delivered.json
tests/fixtures/mondial_relay/: tracking_delivered.json
