[package]
name = "opentrack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = { version = "7", features = ["custom_styling"] }
base64 = "0.22"
crossterm = "0.29"
chromiumoxide = "0.8"
futures = "0.3"
open = "5"
ratatui = "0.30"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
wreq = { version = "6.0.0-rc.28", features = ["json", "socks", "gzip", "brotli", "cookies"] }
wreq-util = "3.0.0-rc.10"
xdg = "2"

notify-rust = { version = "4", optional = true }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[features]
default = []
notify-desktop = ["dep:notify-rust"]
prefix-symbols = ["wreq/prefix-symbols"]
